--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+absl-py==1.4.0
 appdirs==1.4.4
 asttokens==2.2.1
+astunparse==1.6.3
 backcall==0.2.0
 beautifulsoup4==4.12.2
+cachetools==5.3.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 colorama==0.4.6
@@ -16,16 +19,26 @@ executing==1.2.0
 flatbuffers==23.5.26
 fonttools==4.42.1
 frozendict==2.3.8
+gast==0.4.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.57.0
+h5py==3.9.0
 html5lib==1.1
 idna==3.4
 ipykernel==6.25.1
 ipython==8.14.0
 jedi==0.19.0
+joblib==1.3.2
 jupyter_client==8.3.0
 jupyter_core==5.3.1
+keras==2.13.1
 kiwisolver==1.4.4
 libclang==16.0.6
 lxml==4.9.3
+Markdown==3.4.4
+MarkupSafe==2.1.3
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
 multitasking==0.0.11
@@ -33,6 +46,7 @@ nest-asyncio==1.5.7
 numpy==1.24.3
 oandapyV20==0.7.2
 oauthlib==3.2.2
+opt-einsum==3.3.0
 packaging==23.1
 pandas==2.0.3
 parso==0.8.3
@@ -45,6 +59,7 @@ protobuf==4.24.1
 psutil==5.9.5
 pure-eval==0.2.2
 pyasn1==0.5.0
+pyasn1-modules==0.3.0
 Pygments==2.16.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -53,16 +68,24 @@ pywin32==306
 PyYAML==6.0.1
 pyzmq==25.1.1
 requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikeras==0.11.0
+scikit-learn==1.3.0
 scipy==1.11.2
 six==1.16.0
 soupsieve==2.4.1
 stack-data==0.6.2
 statsmodels==0.14.0
 stocktrends==0.1.5
+tensorboard==2.13.0
 tensorboard-data-server==0.7.1
+tensorflow==2.13.0
 tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
+threadpoolctl==3.2.0
 tornado==6.3.3
 tpqoa @ git+https://github.com/yhilpisch/tpqoa@4a79f30b7095642844ef99741d9bfcb952e394db
 traitlets==5.9.0
@@ -73,5 +96,6 @@ urllib3==1.26.16
 v20==3.0.25.0
 wcwidth==0.2.6
 webencodings==0.5.1
+Werkzeug==2.3.7
 wrapt==1.15.0
 yfinance==0.2.28
